src/main/css/popular.css
.popular {
	margin-top: 24px;
	padding: 12%;
	line-height: 1.6em;
	background-color: #333333;
	color: #ffffff;
	border: 1px solid #333333;
	box-sizing: border-box;
	position: relative;
}

.frontpage .popular {
	padding: 5%;
	background-color: #fff;
	border: none;
}

.popular h3 {
	text-transform: uppercase;
	font-family: 'Fjord One', serif;
	color: #ffffff;
	text-align: center;
	background-image: none;
}

.frontpage .popular h3 {
	color: #000;
	text-transform: none;
}

.popular li {
	border-bottom: none;
}

.popular:after {
	content: '.';
	display: block;
	height: 0;
	font-size: 0;
	clear: both;
	visibility: hidden;
}

.popular a, .popular a .fa {
	color: #fff;
}

.frontpage .popular a, .frontpage .popular a .fa {
    color: #007c92;
}

.frontpage .popular li {
    font-size: 18px;
}

@media ( max-width : 812px) {
	.popular  .menu-toggle {
		top: -1px;
		right: -1px;
	}
	

}	 

